--- a/index.html
+++ b/index.html
@@ -6,7 +6,5 @@
     <title>Mon premier repo git</title>
     <link rel="styesheet" href="css/styles.css">
 	</head>
-	<body>
-    <h1>Bonjour </h1>
-  </body>
+	<body></body>
 </html>
